--- a/index.html/index .html
+++ b/index.html/index .html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>fxgxfghxhhhh</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, atque perferendis earum velit nemo nobis mollitia incidunt voluptate ducimus corrupti repellat doloribus minima maiores. Laboriosam enim at minus iure voluptatem.
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. mollitia incidunt voluptate ducimus corrupti repellat doloribus minima maiores. Laboriosam enim at minus iure voluptatem.
 
     </p>
     <button>fhxh</button>
